syntax = "proto3";
package neutron.dex;

import "neutron/dex/pair_id.proto";

option go_package = "github.com/neutron-org/neutron/v5/x/dex/types";

message PoolMetadata {
  uint64 id = 1;
  int64 tick = 2;
  uint64 fee = 3;
  PairID pair_id = 4;
}
