syntax = "proto3";
package neutron.incentives;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/neutron-org/neutron/x/incentives/types";

// Stake records what coins are staked when by who for the purpose of
// calculating gauge reward distributions.
message Stake {

  // ID is the "autoincrementing" id of the stake, assigned at creation.
  uint64 ID = 1;

  // owner is the account originating the stake. Only the owner can withdraw
  // coins from the stake.
  string owner = 2 [ (gogoproto.moretags) = "yaml:\"owner\"" ];

  // start_time is the time at which the coins in the lock were staked.
  google.protobuf.Timestamp start_time = 3 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.jsontag) = "start_time,omitempty",
    (gogoproto.moretags) = "yaml:\"start_time\""
  ];

  // coins are the tokens staked, and managed by the module account.
  repeated cosmos.base.v1beta1.Coin coins = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];

  // start_dist_epoch is the dist epoch (defaulting to the day) at which the
  // coins in the lock were staked. This is used by distribution logic to filter
  // on stakes that have existed for longer than the distribution period (you
  // can only qualify for today's rewards if you staked your LP tokens
  // yesterday). We use int64 instead of uint64 to make testing easier.
  int64 start_dist_epoch = 5;
}